--- a/explorer/src/main/resources/application.properties
+++ b/explorer/src/main/resources/application.properties
@@ -4,6 +4,11 @@ server.address=127.0.0.1
 #server.sessionTimeout=30
 #server.context-path=/cache
 
+#日志级别
+logging.level.root = INFO
+logging.level.org.springframework.web = INFO
+logging.level.org.springframework.security = INFO
+
 # 数据库访问配置
 # 主数据源，默认的
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -44,7 +49,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 #spring.jpa.properties.hibernate.cache.use_query_cache=true
 #spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
 #spring.jpa.properties.javax.persistence.sharedCache.mode=ENABLE_SELECTIVE
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.connection.autocommit=false
 
@@ -52,6 +57,3 @@ spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
-
-#日志级别
-logging.level.org.springframework.security=DEBUG 
