--- a/explorer/pom.xml
+++ b/explorer/pom.xml
@@ -64,6 +64,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<version>1.1.5</version>
@@ -78,6 +83,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
